# Tolkon

./: README.md  sdkconfig  sdkconfig.old
components/gui/squareline/project/: CMakeLists.txt  esp32_gui.sll  esp32_gui.spj  filelist.txt  ui.c  ui.h  ui_events.c
components/gui/squareline/project/images/: ui_img_auto_2_png.c  ui_img_backgorund1_png.c  ui_img_linije_2_png.c  ui_img_temperatura_2_png.c  ui_img_temperatura_3_png.c  ui_img_wifi_2_png.c  ui_img_wifi_2_yes_png.c
components/gui/squareline/project/screens/: ui_Home_Scr.c  ui_Parking_assistant.c  ui_Warning_Scr.c
components/lvgl/src/font/: lv_font_montserrat_10.c  lv_font_montserrat_20.c  lv_font_montserrat_30.c
components/lvgl_esp32_drivers/lvgl_tft/: st7735s.c
main/: CMakeLists.txt  app_main.c  sound.c  sound.h  ultrasonic.c  ultrasonic.h  wifi_controller.h
